Fixed spacing on home page

--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -12,7 +12,7 @@ video {
     center 
     center/cover
     no-repeat; 
-    height: 100vh;
+    height: 75vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
